# thor-dmd

./: .gitignore
thor_eye_tracking/: Synchronizing_Qualisys_Tobii.m
thor_trajectories/: README.txt  README_map_goals_info.txt  demo.m  load_data-KB.m  load_data.m  load_data_KB.m  load_data_KB.m~  load_data_KB_cell.m  load_data_RS.m  load_data_RS1.m  nan_aware_average.m  playdata.m  plotMap.m  plotSingleTrajectory.m  plot_hyperparameters_RS.m  restoreTrajectory.m  restore_data_from_markers.m  state_vec.m
thor_velodyne_utils/: CMakeLists.txt  README.md  package.xml  velodyne_with_people.rviz
thor_velodyne_utils/launch/: rosbag_velodyne_viz.launch  vlp16points.launch
thor_velodyne_utils/scripts/: fix_time_stamps.py  get_transform.m  mat2ROS.m  writeMat2CSV.m
