<?xml version="1.0"?>
<package format="2">
  <name>thor_velodyne_utils</name>
  <version>0.0.1</version>
  <description>A package with scripts and launches for using / visualizing the THÖR dataset</description>
  <maintainer email="ksatyaki@gmail.com">Chittaranjan Srinivas Swaminathan</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
